- Fixed Motherless ripper - increased default retries to 3 (why only 1?) - fixed deprecation message for Motherless ripper